--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Matt Delac</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/VeronicaAntonovich" target="_blank">Veranika Antanovich</a> and is
+          <a href="https://github.com/VeronicaAntonovich/weather_app" target="_blank"> on GitHub</a> and
+          <a href="https://verdant-daifuku-f5da86.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
